feat: implement role-based authority retrieval in AuthUser